--- a/symfony-backend/app/.env
+++ b/symfony-backend/app/.env
@@ -34,3 +34,7 @@ DATABASE_URL="postgresql://symfony:password@symfony_postgres:5432/symfony_db?ser
 ###< doctrine/doctrine-bundle ###
 
 
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
