composer install added

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     ports:
       - "8000:8000"
     command: 
-      bash -c "php bin/console doctrine:schema:update --force && symfony server:start --no-tls --port=8000 --allow-all-ip"
+      bash -c "composer install && php bin/console doctrine:schema:update --force && symfony server:start --no-tls --port=8000 --allow-all-ip"
 
   db:
     image: postgres:13
