--- a/symfony-backend/app/.env
+++ b/symfony-backend/app/.env
@@ -29,7 +29,7 @@ SYMFONY_PARAMS=MockApp
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://symfony:password@symfony_postgres:5432/symfony_db?serverVersion=13&charset=utf8"
+DATABASE_URL="postgresql://kicknetApp:kicknet@db:5432/kicknet_db?serverVersion=13&charset=utf8"
 
 ###< doctrine/doctrine-bundle ###
 
