--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
 
   db:
     image: postgres:13
-    container_name: stronova_postgres
+    container_name: kicknet_postgres
     restart: always
     environment:
       POSTGRES_USER: kicknetApp
