login y registro con mailer

--- a/symfony-backend/app/.env
+++ b/symfony-backend/app/.env
@@ -29,9 +29,9 @@ SYMFONY_PARAMS=MockApp
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://kicknetApp:kicknet@localhost:5551/kicknet_db?serverVersion=13&charset=utf8"
+#DATABASE_URL="postgresql://kicknetApp:kicknet@localhost:5551/kicknet_db?serverVersion=13&charset=utf8"
 #DATABASE_URL="pgsql://kicknetApp:kicknet@127.0.0.1:5432/kicknet_db"
-#DATABASE_URL="pgsql://kicknetApp:kicknet@db:5432/kicknet_db"
+DATABASE_URL="pgsql://kicknetApp:kicknet@db:5432/kicknet_db"
 
 
 
@@ -50,5 +50,13 @@ JWT_PASSPHRASE=Kicknet
 ###< lexik/jwt-authentication-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=null://null
+MAILER_DSN=smtp://8ebe1f001@smtp-brevo.com:U35MbdECrNWwcDQG@smtp-relay.brevo.com:587
 ###< symfony/mailer ###
+
+MAILER_FROM_ADDRESS=kicknet@gmail.com
+MAILER_FROM_NAME="Kicknet"
+
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
+
+###> symfony/mailer ###
