--- a/symfony-backend/app/.env
+++ b/symfony-backend/app/.env
@@ -50,10 +50,10 @@ JWT_PASSPHRASE=Kicknet
 ###< lexik/jwt-authentication-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://8ebe1f001@smtp-brevo.com:U35MbdECrNWwcDQG@smtp-relay.brevo.com:587
+MAILER_DSN=brevo+smtp://8ebe1f001@smtp-brevo.com:U35MbdECrNWwcDQG@default
 ###< symfony/mailer ###
 
-MAILER_FROM_ADDRESS=kicknet@gmail.com
+MAILER_FROM_ADDRESS=vicentenr8@gmail.com
 MAILER_FROM_NAME="Kicknet"
 
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
