--- a/symfony-backend/app/composer.json
+++ b/symfony-backend/app/composer.json
@@ -13,6 +13,7 @@
         "doctrine/orm": "^3.3",
         "lexik/jwt-authentication-bundle": "^3.1",
         "nelmio/cors-bundle": "^2.5",
+        "symfony/brevo-mailer": "6.4.*",
         "symfony/console": "6.4.*",
         "symfony/dotenv": "6.4.*",
         "symfony/flex": "^2",
