--- a/symfony-backend/composer.json
+++ b/symfony-backend/composer.json
@@ -8,7 +8,8 @@
         "symfony/runtime": "^7.3",
         "symfony/twig-bridge": "^7.3",
         "symfony/serializer": "^7.3",
-        "symfony/http-client": "^7.3"
+        "symfony/http-client": "^7.3",
+        "symfony/brevo-mailer": "^7.3"
     },
     "config": {
         "allow-plugins": {
