--- a/angular-frontend/package.json
+++ b/angular-frontend/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@tailwindcss/postcss": "^4.0.10",
+    "lottie-web": "^5.13.0",
+    "ngx-lottie": "^13.0.1",
     "ngx-toastr": "^19.0.0",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
